Add title block and featured image

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
           <li><a href="">header link 3</a></li>
         </ul>
       </div>
+      <div class="container-one">
+        <div class="title-block">
+            <h1 class="title">This Website is Awesome</h1>
+            <p class="title-secondary">This website has some subtext that goes here under the main title. It's smaller and the color is a lower contrast.</p>
+            <button>Sign up</button>
+        </div>
+        <div class="featured-image">Image goes here</div>
+      </div>
     </div>
   </body>
 </html>
