Add information section

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <div class="header">
         <div class="logo">Header Logo</div>
         <ul class="header-links">
-          <li><a href="">header link 1</a></li>
-          <li><a href="">header link 2</a></li>
-          <li><a href="">header link 3</a></li>
+          <li><a href="">header link one</a></li>
+          <li><a href="">header link two</a></li>
+          <li><a href="">header link three</a></li>
         </ul>
       </div>
       <div class="container-one">
@@ -24,6 +24,27 @@
         </div>
         <div class="featured-image">Image goes here</div>
       </div>
+    </div>
+    <div class="section-two">
+        <h1>Some random information.</h1>
+        <div class="information-container">
+            <div class="information-box">
+                <div class="info-image"></div>
+                <p>This is some subtext under an illustation or image</p>
+            </div>
+            <div class="information-box">
+                <div class="info-image"></div>
+                <p>This is some subtext under an illustation or image</p>
+            </div>
+            <div class="information-box">
+                <div class="info-image"></div>
+                <p>This is some subtext under an illustation or image</p>
+            </div>
+            <div class="information-box">
+                <div class="info-image"></div>
+                <p>This is some subtext under an illustation or image</p>
+            </div>
+        </div>
     </div>
   </body>
 </html>
