Add quote section

--- a/index.html
+++ b/index.html
@@ -18,33 +18,46 @@
       </div>
       <div class="container-one">
         <div class="title-block">
-            <h1 class="title">This Website is Awesome</h1>
-            <p class="title-secondary">This website has some subtext that goes here under the main title. It's smaller and the color is a lower contrast.</p>
-            <button>Sign up</button>
+          <h1 class="title">This Website is Awesome</h1>
+          <p class="title-secondary">
+            This website has some subtext that goes here under the main title.
+            It's smaller and the color is a lower contrast.
+          </p>
+          <button>Sign up</button>
         </div>
         <div class="featured-image">Image goes here</div>
       </div>
     </div>
     <div class="section-two">
-        <h1>Some random information.</h1>
-        <div class="information-container">
-            <div class="information-box">
-                <div class="info-image"></div>
-                <p>This is some subtext under an illustation or image</p>
-            </div>
-            <div class="information-box">
-                <div class="info-image"></div>
-                <p>This is some subtext under an illustation or image</p>
-            </div>
-            <div class="information-box">
-                <div class="info-image"></div>
-                <p>This is some subtext under an illustation or image</p>
-            </div>
-            <div class="information-box">
-                <div class="info-image"></div>
-                <p>This is some subtext under an illustation or image</p>
-            </div>
+      <h1>Some random information.</h1>
+      <div class="information-container">
+        <div class="information-box">
+          <div class="info-image"></div>
+          <p>This is some subtext under an illustation or image</p>
         </div>
+        <div class="information-box">
+          <div class="info-image"></div>
+          <p>This is some subtext under an illustation or image</p>
+        </div>
+        <div class="information-box">
+          <div class="info-image"></div>
+          <p>This is some subtext under an illustation or image</p>
+        </div>
+        <div class="information-box">
+          <div class="info-image"></div>
+          <p>This is some subtext under an illustation or image</p>
+        </div>
+      </div>
+    </div>
+    <div class="section-three">
+      <div class="quote-box">
+        <p class="quote">
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          its just filling space, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.
+        </p>
+        <p class="signature">- Thor, God of Thunder</p>
+      </div>
     </div>
   </body>
 </html>
