Add call to action section

--- a/index.html
+++ b/index.html
@@ -59,5 +59,14 @@
         <p class="signature">- Thor, God of Thunder</p>
       </div>
     </div>
+    <div class="section-four">
+        <div class="sign-up-block">
+            <div class="call-to-action">
+                <h2 class="action-heading">Call to Action! It's time!</h2>
+                <p class="action-para">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="action-button">Sign up</button>
+        </div>
+    </div>
   </body>
 </html>
