--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
             <button class="action-button">Sign up</button>
         </div>
     </div>
+    <div class="footer">Copyright &copy; The Odin Project 2021</div>
   </body>
 </html>
